--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,54 @@
 
     font-family: 'Montserrat', sans-serif;
 }
+
+body
+
+header nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 20px;
+}
+
+header nav a {
+    color: black;
+    text-decoration: none;
+}
+
+header nav ul{
+    display: flex;
+}
+
+header nav li {
+    margin: 0px 15px;
+}
+
+.section1 {
+    display: flex;
+}
+
+.word {
+    letter-spacing: 2px;
+}
+
+.section1 h1 {
+    font-size: 3.1rem;
+    font-weight: bold;
+}
+
+.section1 img {
+    width: 100%;
+}
+
+.mystack {
+    line-height: 0.5;
+}
+
+.apresentacao {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
