Fixing 'Projects' title placement/2

--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ main {
     margin-top: 15rem;
 }
 
-.section3, .section4, .section5, .section6 {
+.section3, .text-projetos, .section5, .section6 {
     max-width: 1200px;
     margin: 0 auto;
 }
