--- a/medias/medias.css
+++ b/medias/medias.css
@@ -1,6 +1,16 @@
 @media (max-width: 1200px) {
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+
+    }
+
     .ttexto-skills, .text-projetos, .section5, .Texto-contato {
         margin-left: 10%;
+    }
+
+    .section1 .img-main img {
+        width: 500px;
     }
 }
 
@@ -10,15 +20,155 @@
     }
 }
 
+@media (max-width: 1119px) {
+    .word {
+        font-size: 14px;
+    }
+
+    .section1 h1 {
+        font-size: 2.8rem;
+    }
+
+    .section1 .img-main img {
+        width: 450px;
+    }
+}
+
+@media (max-width: 1022px) {
+    .section1 .img-main img {
+        width: 410px;
+    }
+}
+
 @media (max-width: 992px) {
     header nav ul {
         display: none;
+    }
+
+    .section1 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .word {
+        font-size: 16px;
+    }
+
+    .section1 h1 {
+        font-size: 3.6rem;
+    }
+
+    .section1 .img-main img {
+        display: none;
+    }
+
+    .section1 .img-main .imagen2 {
+        display: block;
+    }
+
+    .section2 {
+        margin-top: 0rem;
+    }
+}
+
+@media (max-width: 992px) {
+    .word {
+        font-size: 14px;
+    }
+
+    .section1 h1 {
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width: 569px) {
+    .word {
+        font-size: 12px;
+    }
+    .section1 .titulo-section1 h1 {
+        font-size: 2.6rem;
+    }
+}
+
+@media (max-width: 535px) {
+    .word {
+        font-size: 12px;
+    }
+
+    .container-word {
+        display: flex;
+        justify-content: center;
+    }
+
+    .section1 .titulo-section1 {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .section1 .titulo-section1 h1 {
+        font-size: 2.4rem;
+    }
+
+    .section1 {
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 501px) {
+    .section1 .titulo-section1 h1 {
+        font-size: 1.8rem;
+    }
+
+    .section1 .img-main img {
+        width: 300px;
     }
 }
 
 @media (min-width: 400px) and (max-width: 575px) {
     .section3 h1, .section4 h1, .section5 h1, .section6 h1 {
         font-size: 35px;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 575px) {
+    .container-habilidades {
+        justify-content: flex-start;
+    }
+
+    .container-habilidades img {
+        width: 77px;
+        margin: 0px 0.2rem;
+    }
+
+    .descri-linguagem {
+    padding-top: 2rem;
+    }
+}
+
+@media (min-width: 100px) and (max-width: 575px) {
+    hr {
+        display: block;
+    }
+
+    .aviso-email {
+        display: none;
+    }
+
+    .container-buttom {
+        justify-content: center;
+    }
+
+    form textarea {
+        width: 100%;
+    }
+
+    .descri-linguagem p {
+        font-size: 0.8rem;
     }
 }
 
@@ -48,26 +198,12 @@
     .menu-hamburguer img {
         padding-left: 0rem;
     }
-}
 
-@media (min-width: 100px) and (max-width: 575px) {
-    hr {
-        display: block;
-    }
-
-    .aviso-email {
-        display: none;
-    }
-
-    .container-buttom {
+    .container-habilidades {
         justify-content: center;
     }
 
-    form textarea {
-        width: 100%;
-    }
-
-    .descri-linguagem p {
-        font-size: 0.8rem;
+    .container-habilidades img {
+        width: 70px;
     }
 }
