:ok_hand: style: Alterando imagens das tecnologias 'Agular' e 'Spring Boot'

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ main {
 .container-habilidades {
     flex-wrap: wrap;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
