:sparkles: feat: Adiciona interação de clique para exibir informações da habilidade
- Implementa a funcionalidade de mostrar o nome e a descrição da habilidade quando uma imagem é clicada.
- Atualiza o código JavaScript para interagir com o DOM de maneira adequada.

--- a/css/style.css
+++ b/css/style.css
@@ -254,9 +254,9 @@ main {
 }
 
 .descri-linguagem p{
-    font-size: 1.0rem;
+    font-size: 1.2rem;
     margin-top: 2rem;
-
+    padding-bottom: 0.5rem;
     border-bottom: 2px #405ABA solid;
 }
 
