--- a/medias/medias.css
+++ b/medias/medias.css
@@ -42,8 +42,39 @@
 }
 
 @media (max-width: 992px) {
+
+    body {
+        overflow-x: hidden;
+    }
+
+    header {
+        background-color: #f3f0f0;
+    }
+
     header nav ul {
+        position: absolute;
+        top: 9vh;
+        right: 0;
         display: none;
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-around;
+
+        width: 50vw;
+        height: 91vh;
+
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+
+        background-color: #f3f0f0;
+    }
+
+    header nav ul li {
+        margin: 5rem 10vw;
+    }
+
+    header nav ul.active {
+        transform: translateX(0);
     }
 
     .section1 {
@@ -149,6 +180,12 @@
 }
 
 @media (max-width: 569px) {
+
+    .contact {
+        border: none;
+        color: black;
+    }
+
     .word {
         font-size: 12px;
     }
@@ -170,6 +207,11 @@
 }
 
 @media (max-width: 535px) {
+
+    .contact i {
+        display: none;
+    }
+
     .word {
         font-size: 12px;
     }
@@ -296,6 +338,10 @@
 }
 
 @media (min-width: 110px) and (max-width: 400px) {
+
+    header nav ul li {
+        margin: 5rem 1vw;
+    }
 
     .section3 h1,.section4 h1, .section5 h1, .section6 h1 {
         font-size: 28px;
