--- a/medias/medias.css
+++ b/medias/medias.css
@@ -53,7 +53,7 @@
 
     header nav ul {
         position: absolute;
-        top: 9vh;
+        top: 8vh;
         right: 0;
         display: none;
         flex-direction: column;
@@ -61,7 +61,7 @@
         justify-content: space-around;
 
         width: 50vw;
-        height: 91vh;
+        height: 92vh;
 
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
@@ -291,6 +291,10 @@
 
     .minha-foto .meu-nome h2 {
         font-size: 1.0rem;
+    }
+
+    header nav ul {
+        width: 100vw;
     }
 }
 
