--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ header {
     z-index: 999;
 
     background-color: #FFFFFF;
+
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Sombra na parte inferior */
 }
 
 header nav{
