Ajuste de max-width de 1200px para 1400px em algumas sections

--- a/css/style.css
+++ b/css/style.css
@@ -306,9 +306,10 @@ main {
     margin-top: 15rem;
 }
 
-.section3, .text-projetos, .section5, .section6 {
-    max-width: 1200px;
+.section3, .text-projetos, .section5, .section6, .section4 {
+    max-width: 1400px;
     margin: 0 auto;
+    border: solid 1px red;
 }
 
 .preview-project {
